<resources>
    <string name="app_name">Mind Grocery</string>
    <string name="item_name">Item Name</string>
    <string name="quantity">Quantity</string>
    <string name="rate">Rate</string>
    <string name="total_cost">Total Cost</string>
    <string name="amount">Amount</string>
    <string name="addfloating">add floating action button</string>
    <string name="add_items_to_cart">Add Items To Cart</string>
    <string name="enter_item_name">Enter Item Name</string>
    <string name="enter_item_quantity">Enter Item Quantity</string>
    <string name="enter_item_rate">Enter Item Rate</string>
    <string name="cancel">Cancel</string>
    <string name="add">Add</string>
</resources>